Fix borked success rate on IE/Edge

--- a/resources/assets/less/bem/beatmapset-success-rate.less
+++ b/resources/assets/less/bem/beatmapset-success-rate.less
@@ -56,6 +56,10 @@
 
   &__percentage {
     width: fit-content;
+
+    // IE/Edge workaround
+    display: table;
+
     transition: padding-left 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 
     padding-bottom: @spacing;
